--- a/References/references.bib
+++ b/References/references.bib
@@ -1214,3 +1214,329 @@ PMCID: PMC4016708}
 	doi = {10.1093/nar/gky691},
 	url = {https://academic.oup.com/nar/advance-article/doi/10.1093/nar/gky691/5061974}
 }
+
+@article{cotton2009,
+	title = {Inactive X chromosome-specific reduction in placental DNA methylation},
+	author = {{Cotton}, {Allison M.} and {Avila}, {Luana} and {Penaherrera}, {Maria S.} and {Affleck}, {Joslynn G.} and {Robinson}, {Wendy P.} and {Brown}, {Carolyn J.}},
+	year = {2009},
+	month = {10},
+	date = {2009-10-01},
+	journal = {Human Molecular Genetics},
+	pages = {3544--3552},
+	volume = {18},
+	number = {19},
+	doi = {10.1093/hmg/ddp299},
+	url = {https://academic.oup.com/hmg/article/18/19/3544/2385630},
+	langid = {en}
+}
+
+@article{perrin2007,
+	title = {Specific hypermethylation of LINE-1 elements during abnormal overgrowth and differentiation of human placenta},
+	author = {{Perrin}, {D.} and {Ballestar}, {E.} and {Fraga}, {M. F.} and {Frappart}, {L.} and {Esteller}, {M.} and {Guerin}, {J.-F.} and {Dante}, {R.}},
+	year = {2007},
+	month = {04},
+	date = {2007-04},
+	journal = {Oncogene},
+	pages = {2518--2524},
+	volume = {26},
+	number = {17},
+	doi = {10.1038/sj.onc.1210039},
+	url = {https://www.nature.com/articles/1210039},
+	langid = {en}
+}
+
+@article{schroeder2013,
+	title = {The human placenta methylome},
+	author = {{Schroeder}, {Diane I.} and {Blair}, {John D.} and {Lott}, {Paul} and {Yu}, {Hung On Ken} and {Hong}, {Danna} and {Crary}, {Florence} and {Ashwood}, {Paul} and {Walker}, {Cheryl} and {Korf}, {Ian} and {Robinson}, {Wendy P.} and {LaSalle}, {Janine M.}},
+	year = {2013},
+	month = {04},
+	date = {2013-04-09},
+	journal = {Proceedings of the National Academy of Sciences},
+	pages = {6037--6042},
+	volume = {110},
+	number = {15},
+	doi = {10.1073/pnas.1215145110},
+	url = {https://www.pnas.org/content/110/15/6037},
+	note = {PMID: 23530188},
+	langid = {en}
+}
+
+@article{salhab2018,
+	title = {A comprehensive analysis of 195 DNA methylomes reveals shared and cell-specific features of partially methylated domains},
+	author = {{Salhab}, {Abdulrahman} and {Nordström}, {Karl} and {Gasparoni}, {Gilles} and {Kattler}, {Kathrin} and {Ebert}, {Peter} and {Ramirez}, {Fidel} and {Arrigoni}, {Laura} and {Müller}, {Fabian} and {Polansky}, {Julia K.} and {Cadenas}, {Cristina} and {G.Hengstler}, {Jan} and {Lengauer}, {Thomas} and {Manke}, {Thomas} and {Walter}, {Jörn} and {DEEP Consortium}, {}},
+	year = {2018},
+	month = {09},
+	date = {2018-09-28},
+	journal = {Genome Biology},
+	pages = {150},
+	volume = {19},
+	number = {1},
+	doi = {10.1186/s13059-018-1510-5},
+	url = {https://doi.org/10.1186/s13059-018-1510-5}
+}
+
+@article{renfree2013,
+	title = {The origin and evolution of genomic imprinting and viviparity in mammals},
+	author = {{Renfree}, {Marilyn B.} and {Suzuki}, {Shunsuke} and {Kaneko-Ishino}, {Tomoko}},
+	year = {2013},
+	month = {01},
+	date = {2013-01-05},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+	volume = {368},
+	number = {1609},
+	doi = {10.1098/rstb.2012.0151},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3539366/},
+	note = {PMID: 23166401
+PMCID: PMC3539366}
+}
+
+@article{court2014,
+	title = {Genome-wide parent-of-origin DNA methylation analysis reveals the intricacies of human imprinting and suggests a germline methylation-independent mechanism of establishment},
+	author = {{Court}, {Franck} and {Tayama}, {Chiharu} and {Romanelli}, {Valeria} and {Martin-Trujillo}, {Alex} and {Iglesias-Platas}, {Isabel} and {Okamura}, {Kohji} and {Sugahara}, {Naoko} and {Simón}, {Carlos} and {Moore}, {Harry} and {Harness}, {Julie V.} and {Keirstead}, {Hans} and {Sanchez-Mut}, {Jose Vicente} and {Kaneki}, {Eisuke} and {Lapunzina}, {Pablo} and {Soejima}, {Hidenobu} and {Wake}, {Norio} and {Esteller}, {Manel} and {Ogata}, {Tsutomu} and {Hata}, {Kenichiro} and {Nakabayashi}, {Kazuhiko} and {Monk}, {David}},
+	year = {2014},
+	month = {04},
+	date = {2014-04},
+	journal = {Genome Research},
+	pages = {554--569},
+	volume = {24},
+	number = {4},
+	doi = {10.1101/gr.164913.113},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3975056/},
+	note = {PMID: 24402520
+PMCID: PMC3975056}
+}
+
+@article{hamada2016,
+	title = {Allele-Specific Methylome and Transcriptome Analysis Reveals Widespread Imprinting in the Human Placenta},
+	author = {{Hamada}, {Hirotaka} and {Okae}, {Hiroaki} and {Toh}, {Hidehiro} and {Chiba}, {Hatsune} and {Hiura}, {Hitoshi} and {Shirane}, {Kenjiro} and {Sato}, {Tetsuya} and {Suyama}, {Mikita} and {Yaegashi}, {Nobuo} and {Sasaki}, {Hiroyuki} and {Arima}, {Takahiro}},
+	year = {2016},
+	month = {11},
+	date = {2016-11-03},
+	journal = {The American Journal of Human Genetics},
+	pages = {1045--1058},
+	volume = {99},
+	number = {5},
+	doi = {10.1016/j.ajhg.2016.08.021},
+	url = {http://www.sciencedirect.com/science/article/pii/S0002929716303780},
+	langid = {en}
+}
+
+@article{sanchez-delgado2016,
+	title = {Human Oocyte-Derived Methylation Differences Persist in the Placenta Revealing Widespread Transient Imprinting},
+	author = {{Sanchez-Delgado}, {Marta} and {Court}, {Franck} and {Vidal}, {Enrique} and {Medrano}, {Jose} and {Monteagudo-Sánchez}, {Ana} and {Martin-Trujillo}, {Alex} and {Tayama}, {Chiharu} and {Iglesias-Platas}, {Isabel} and {Kondova}, {Ivanela} and {Bontrop}, {Ronald} and {Poo-Llanillo}, {Maria Eugenia} and {Marques-Bonet}, {Tomas} and {Nakabayashi}, {Kazuhiko} and {Simón}, {Carlos} and {Monk}, {David}},
+	year = {2016},
+	month = {11},
+	date = {2016-11-11},
+	journal = {PLOS Genetics},
+	pages = {e1006427},
+	volume = {12},
+	number = {11},
+	doi = {10.1371/journal.pgen.1006427},
+	url = {https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1006427},
+	langid = {en}
+}
+
+@inbook{flanagan2015,
+	title = {Epigenome-Wide Association Studies (EWAS): Past, Present, and Future},
+	author = {{Flanagan}, {James M.}},
+	editor = {{Verma}, {Mukesh}},
+	year = {2015},
+	date = {2015},
+	publisher = {Springer},
+	pages = {51--63},
+	series = {Methods in Molecular Biology},
+	doi = {10.1007/978-1-4939-1804-1_3},
+	url = {https://doi.org/10.1007/978-1-4939-1804-1_3},
+	note = {DOI: 10.1007/978-1-4939-1804-1{\_}3},
+	address = {New York, NY},
+	langid = {en}
+}
+
+@article{teschendorff2017,
+	title = {Cell-type deconvolution in epigenome-wide association studies: A review and recommendations},
+	author = {{Teschendorff}, {Andrew E.} and {Zheng}, {Shijie C.}},
+	year = {2017},
+	month = {05},
+	date = {2017-05},
+	journal = {Epigenomics},
+	pages = {757--768},
+	volume = {9},
+	number = {5},
+	doi = {10.2217/epi-2016-0153},
+	url = {http://www.futuremedicine.com/doi/10.2217/epi-2016-0153}
+}
+
+@article{teschendorff2017a,
+	title = {A comparison of reference-based algorithms for correcting cell-type heterogeneity in Epigenome-Wide Association Studies},
+	author = {{Teschendorff}, {Andrew E.} and {Breeze}, {Charles E.} and {Zheng}, {Shijie C.} and {Beck}, {Stephan}},
+	year = {2017},
+	month = {12},
+	date = {2017-12},
+	journal = {BMC Bioinformatics},
+	pages = {105--105},
+	volume = {18},
+	number = {1},
+	doi = {10.1186/s12859-017-1511-5},
+	url = {http://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-017-1511-5}
+}
+
+@article{houseman2012,
+	title = {DNA methylation arrays as surrogate measures of cell mixture distribution.},
+	author = {{Houseman}, {Eugene Andres} and {Accomando}, {William P} and {Koestler}, {Devin C} and {Christensen}, {Brock C} and {Marsit}, {Carmen J} and {Nelson}, {Heather H} and {Wiencke}, {John K} and {Kelsey}, {Karl T}},
+	year = {2012},
+	date = {2012},
+	journal = {BMC bioinformatics},
+	pages = {86--86},
+	volume = {13},
+	number = {1},
+	doi = {10.1186/1471-2105-13-86},
+	url = {http://www.biomedcentral.com/1471-2105/13/86}
+}
+
+@article{newman2015,
+	title = {Robust enumeration of cell subsets from tissue expression profiles},
+	author = {{Newman}, {Aaron M} and {Liu}, {Chih Long} and {Green}, {Michael R} and {Gentles}, {Andrew J} and {Feng}, {Weiguo} and {Xu}, {Yue} and {Hoang}, {Chuong D} and {Diehn}, {Maximilian} and {Alizadeh}, {Ash A}},
+	year = {2015},
+	month = {05},
+	date = {2015-05},
+	journal = {Nature Methods},
+	pages = {453--457},
+	volume = {12},
+	number = {5},
+	doi = {10.1038/nmeth.3337},
+	url = {http://www.nature.com/articles/nmeth.3337}
+}
+
+@article{pacis2019,
+	title = {Gene activation precedes DNA demethylation in response to infection in human dendritic cells},
+	author = {{Pacis}, {Alain} and {Mailhot-Léonard}, {Florence} and {Tailleux}, {Ludovic} and {Randolph}, {Haley E.} and {Yotova}, {Vania} and {Dumaine}, {Anne} and {Grenier}, {Jean-Christophe} and {Barreiro}, {Luis B.}},
+	year = {2019},
+	month = {04},
+	date = {2019-04-02},
+	journal = {Proceedings of the National Academy of Sciences},
+	pages = {6938--6943},
+	volume = {116},
+	number = {14},
+	doi = {10.1073/pnas.1814700116},
+	url = {https://www.pnas.org/content/116/14/6938},
+	note = {Publisher: National Academy of Sciences
+Section: Biological Sciences
+PMID: 30886108},
+	langid = {en}
+}
+
+@article{razin1991,
+	title = {DNA methylation and gene expression.},
+	author = {{Razin}, {A} and {Cedar}, {H}},
+	year = {1991},
+	month = {09},
+	date = {1991-09},
+	journal = {Microbiological Reviews},
+	pages = {451--458},
+	volume = {55},
+	number = {3},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC372829/},
+	note = {PMID: 1943996
+PMCID: PMC372829}
+}
+
+@article{holbrook2017,
+	title = {Is cellular heterogeneity merely a confounder to be removed from epigenome-wide association studies?},
+	author = {{Holbrook}, {Joanna D} and {Huang}, {Rae-Chi} and {Barton}, {Sheila J} and {Saffery}, {Richard} and {Lillycrop}, {Karen A}},
+	year = {2017},
+	month = {08},
+	date = {2017-08},
+	journal = {Epigenomics},
+	pages = {1143--1150},
+	volume = {9},
+	number = {8},
+	doi = {10.2217/epi-2017-0032},
+	url = {http://www.futuremedicine.com/doi/10.2217/epi-2017-0032}
+}
+
+@article{smith2012,
+	title = {A unique regulatory phase of DNA methylation in the early mammalian embryo},
+	author = {{Smith}, {Zachary D.} and {Chan}, {Michelle M.} and {Mikkelsen}, {Tarjei S.} and {Gu}, {Hongcang} and {Gnirke}, {Andreas} and {Regev}, {Aviv} and {Meissner}, {Alexander}},
+	year = {2012},
+	month = {03},
+	date = {2012-03-28},
+	journal = {Nature},
+	pages = {339--344},
+	volume = {484},
+	number = {7394},
+	doi = {10.1038/nature10960},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3331945/},
+	note = {PMID: 22456710
+PMCID: PMC3331945}
+}
+
+@article{benirschke1973,
+	title = {The human placenta. J. D. Boyd and W. J. Hamilton. Heffer, Cambridge, 365 pp. 1970},
+	author = {{Benirschke}, {Kurt}},
+	year = {1973},
+	date = {1973},
+	journal = {Teratology},
+	pages = {77--78},
+	volume = {8},
+	number = {1},
+	doi = {10.1002/tera.1420080118},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/tera.1420080118},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/tera.1420080118},
+	langid = {en}
+}
+
+@inbook{reyes2017,
+	title = {Hofbauer Cells: Placental Macrophages of Fetal Origin},
+	author = {{Reyes}, {Leticia} and {Wolfe}, {Bryce} and {Golos}, {Thaddeus}},
+	year = {2017},
+	date = {2017},
+	publisher = {Springer, Cham},
+	pages = {45--60},
+	doi = {10.1007/978-3-319-54090-0_3},
+	url = {http://link.springer.com/10.1007/978-3-319-54090-0_3},
+	note = {DOI: 10.1007/978-3-319-54090-0{\_}3}
+}
+
+@article{reyes2018,
+	title = {Hofbauer Cells: Their Role in Healthy and Complicated Pregnancy},
+	author = {{Reyes}, {Leticia} and {Golos}, {Thaddeus G.}},
+	year = {2018},
+	date = {2018},
+	journal = {Frontiers in Immunology},
+	volume = {9},
+	doi = {10.3389/fimmu.2018.02628},
+	url = {https://www.frontiersin.org/articles/10.3389/fimmu.2018.02628/full},
+	langid = {English}
+}
+
+@article{charolidi2019,
+	title = {First trimester placental endothelial cells from pregnancies with abnormal uterine artery Doppler are more sensitive to apoptotic stimuli},
+	author = {{Charolidi}, {Nicoletta} and {Host}, {Amanda J.} and {Ashton}, {Sandra} and {Tryfonos}, {Zoe} and {Leslie}, {Karin} and {Thilaganathan}, {Baskaran} and {Cartwright}, {Judith E.} and {Whitley}, {Guy S.}},
+	year = {2019},
+	month = {03},
+	date = {2019-03},
+	journal = {Laboratory Investigation},
+	pages = {411--420},
+	volume = {99},
+	number = {3},
+	doi = {10.1038/s41374-018-0139-z},
+	url = {https://www.nature.com/articles/s41374-018-0139-z},
+	note = {Number: 3
+Publisher: Nature Publishing Group},
+	langid = {en}
+}
+
+@article{novakovic2017,
+	title = {Variable DAXX gene methylation is a common feature of placental trophoblast differentiation, preeclampsia, and response to hypoxia},
+	author = {{Novakovic}, {Boris} and {Evain-Brion}, {Danièle} and {Murthi}, {Padma} and {Fournier}, {Thiery} and {Saffery}, {Richard}},
+	year = {2017},
+	month = {02},
+	date = {2017-02-21},
+	journal = {The FASEB Journal},
+	pages = {2380--2392},
+	volume = {31},
+	number = {6},
+	doi = {10.1096/fj.201601189RR},
+	url = {https://www.fasebj.org/doi/full/10.1096/fj.201601189RR},
+	note = {Publisher: Federation of American Societies for Experimental Biology}
+}
