added references chapter 3

--- a/References/references.bib
+++ b/References/references.bib
@@ -1540,3 +1540,346 @@ Publisher: Nature Publishing Group},
 	url = {https://www.fasebj.org/doi/full/10.1096/fj.201601189RR},
 	note = {Publisher: Federation of American Societies for Experimental Biology}
 }
+
+@article{heiss2018,
+	title = {Identifying mislabeled and contaminated DNA methylation microarray data: an extended quality control toolset with examples from GEO},
+	author = {{Heiss}, {Jonathan A.} and {Just}, {Allan C.}},
+	year = {2018},
+	month = {06},
+	date = {2018-06-01},
+	journal = {Clinical Epigenetics},
+	pages = {73},
+	volume = {10},
+	number = {1},
+	doi = {10.1186/s13148-018-0504-1},
+	url = {https://doi.org/10.1186/s13148-018-0504-1}
+}
+
+@misc{genehanc,
+	title = {GeneHancer: genome-wide integration of enhancers and target genes in GeneCards | Database | Oxford Academic},
+	url = {https://academic.oup.com/database/article/doi/10.1093/database/bax028/3737828}
+}
+
+@article{das2013,
+	title = {DNMT1 and AIM1 Imprinting in human placenta revealed through a genome-wide screen for allele-specific DNA methylation},
+	author = {{Das}, {Radhika} and {Lee}, {Yew Kok} and {Strogantsev}, {Ruslan} and {Jin}, {Shengnan} and {Lim}, {Yen Ching} and {Ng}, {Poh Yong} and {Lin}, {Xueqin Michelle} and {Chng}, {Keefe} and {Yeo}, {George SH} and {Ferguson-Smith}, {Anne C.} and {Ding}, {Chunming}},
+	year = {2013},
+	month = {10},
+	date = {2013-10-05},
+	journal = {BMC Genomics},
+	pages = {685},
+	volume = {14},
+	number = {1},
+	doi = {10.1186/1471-2164-14-685},
+	url = {https://doi.org/10.1186/1471-2164-14-685}
+}
+
+@article{mayhew2001,
+	title = {Villous trophoblast: morphometric perspectives on growth, differentiation, turnover and deposition of fibrin-type fibrinoid during gestation},
+	author = {{Mayhew}, {T. M.} and {Barker}, {B. L.}},
+	year = {2001},
+	month = {08},
+	date = {2001-08},
+	journal = {Placenta},
+	pages = {628--638},
+	volume = {22},
+	number = {7},
+	doi = {10.1053/plac.2001.0700},
+	note = {PMID: 11504531},
+	langid = {eng}
+}
+
+@article{liu2018,
+	title = {Single-cell RNA-seq reveals the diversity of trophoblast subtypes and patterns of differentiation in the human placenta},
+	author = {{Liu}, {Yawei} and {Fan}, {Xiaoying} and {Wang}, {Rui} and {Lu}, {Xiaoyin} and {Dang}, {Yan Li} and {Wang}, {Huiying} and {Lin}, {Hai Yan} and {Zhu}, {Cheng} and {Ge}, {Hao} and {Cross}, {James C.} and {Wang}, {Hongmei}},
+	year = {2018},
+	month = {08},
+	date = {2018-08},
+	journal = {Cell Research},
+	pages = {819--832},
+	doi = {10.1038/s41422-018-0066-y},
+	url = {http://www.nature.com/articles/s41422-018-0066-y},
+	note = {DOI: 10.1038/s41422-018-0066-y}
+}
+
+@article{yabe2016,
+	title = {Comparison of syncytiotrophoblast generated from human embryonic stem cells and from term placentas},
+	author = {{Yabe}, {Shinichiro} and {Alexenko}, {Andrei P.} and {Amita}, {Mitsuyoshi} and {Yang}, {Ying} and {Schust}, {Danny J.} and {Sadovsky}, {Yoel} and {Ezashi}, {Toshihiko} and {Roberts}, {R. Michael}},
+	year = {2016},
+	month = {05},
+	date = {2016-05-10},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	pages = {E2598--E2607},
+	volume = {113},
+	number = {19},
+	doi = {10.1073/pnas.1601630113},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4868474/},
+	note = {PMID: 27051068
+PMCID: PMC4868474}
+}
+
+@article{butler2017,
+	title = {Integrin linked kinase regulates syncytialization of BeWo trophoblast cells},
+	author = {{Butler}, {Trina M.} and {Pater}, {Justin A.} and {MacPhee}, {Daniel J.}},
+	year = {2017},
+	month = {03},
+	date = {2017-03-01},
+	journal = {Biology of Reproduction},
+	pages = {673--685},
+	volume = {96},
+	number = {3},
+	doi = {10.1095/biolreprod.116.145748},
+	url = {https://academic.oup.com/biolreprod/article/96/3/673/2959520},
+	note = {Publisher: Oxford Academic},
+	langid = {en}
+}
+
+@article{simmons2013,
+	title = {Human placental sulfate transporter mRNA profiling from term pregnancies identifies abundant SLC13A4 in syncytiotrophoblasts and SLC26A2 in cytotrophoblasts},
+	author = {{Simmons}, {D. G.} and {Rakoczy}, {J.} and {Jefferis}, {J.} and {Lourie}, {R.} and {McIntyre}, {H. D.} and {Dawson}, {P. A.}},
+	year = {2013},
+	month = {04},
+	date = {2013-04-01},
+	journal = {Placenta},
+	pages = {381--384},
+	volume = {34},
+	number = {4},
+	doi = {10.1016/j.placenta.2013.01.017},
+	url = {http://www.sciencedirect.com/science/article/pii/S0143400413000726},
+	langid = {en}
+}
+
+@article{gervin2019,
+	title = {Systematic evaluation and validation of reference and library selection methods for deconvolution of cord blood DNA methylation data},
+	author = {{Gervin}, {Kristina} and {Salas}, {Lucas A.} and {Bakulski}, {Kelly M.} and {van Zelm}, {Menno C.} and {Koestler}, {Devin C.} and {Wiencke}, {John K.} and {Duijts}, {Liesbeth} and {Moll}, {Henriëtte A.} and {Kelsey}, {Karl T.} and {Kobor}, {Michael S.} and {Lyle}, {Robert} and {Christensen}, {Brock C.} and {Felix}, {Janine F.} and {Jones}, {Meaghan J.}},
+	year = {2019},
+	month = {08},
+	date = {2019-08-27},
+	journal = {Clinical Epigenetics},
+	volume = {11},
+	doi = {10.1186/s13148-019-0717-y},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6712867/},
+	note = {PMID: 31455416
+PMCID: PMC6712867}
+}
+
+@article{price2012,
+	title = {Different measures of {"}genome-wide{"} DNA methylation exhibit unique properties in placental and somatic tissues},
+	author = {{Price}, {E. Magda} and {Cotton}, {Allison M.} and {Peñaherrera}, {Maria S.} and {McFadden}, {Deborah E.} and {Kobor}, {Michael S.} and {Robinson}, {Wendy}},
+	year = {2012},
+	month = {06},
+	date = {2012-06-01},
+	journal = {Epigenetics},
+	pages = {652--663},
+	volume = {7},
+	number = {6},
+	doi = {10.4161/epi.20221},
+	note = {PMID: 22531475
+PMCID: PMC3398992},
+	langid = {eng}
+}
+
+@article{zink2018,
+	title = {Insights into imprinting from parent-of-origin phased methylomes and transcriptomes},
+	author = {{Zink}, {Florian} and {Magnusdottir}, {Droplaug N.} and {Magnusson}, {Olafur T.} and {Walker}, {Nicolas J.} and {Morris}, {Tiffany J.} and {Sigurdsson}, {Asgeir} and {Halldorsson}, {Gisli H.} and {Gudjonsson}, {Sigurjon A.} and {Melsted}, {Pall} and {Ingimundardottir}, {Helga} and {Kristmundsdottir}, {Snædis} and {Alexandersson}, {Kristjan F.} and {Helgadottir}, {Anna} and {Gudmundsson}, {Julius} and {Rafnar}, {Thorunn} and {Jonsdottir}, {Ingileif} and {Holm}, {Hilma} and {Eyjolfsson}, {Gudmundur Ingi} and {Sigurdardottir}, {Olof} and {Olafsson}, {Isleifur} and {Masson}, {Gisli} and {Gudbjartsson}, {Daniel F.} and {Thorsteinsdottir}, {Unnur} and {Halldorsson}, {Bjarni V.} and {Stacey}, {Simon N.} and {Stefansson}, {Kari}},
+	year = {2018},
+	month = {11},
+	date = {2018-11},
+	journal = {Nature Genetics},
+	pages = {1542--1552},
+	volume = {50},
+	number = {11},
+	doi = {10.1038/s41588-018-0232-7},
+	url = {https://www.nature.com/articles/s41588-018-0232-7},
+	langid = {en}
+}
+
+@article{reiss2007,
+	title = {Widely variable endogenous retroviral methylation levels in human placenta},
+	author = {{Reiss}, {Daphne} and {Zhang}, {Ying} and {Mager}, {Dixie L.}},
+	year = {2007},
+	date = {2007},
+	journal = {Nucleic Acids Research},
+	pages = {4743--4754},
+	volume = {35},
+	number = {14},
+	doi = {10.1093/nar/gkm455},
+	note = {PMID: 17617638
+PMCID: PMC1950553},
+	langid = {eng}
+}
+
+@article{vento-tormo2018,
+	title = {Single-cell reconstruction of the early maternal{\textendash}fetal interface in humans},
+	author = {{Vento-Tormo}, {Roser} and {Efremova}, {Mirjana} and {Botting}, {Rachel A.} and {Turco}, {Margherita Y.} and {Vento-Tormo}, {Miquel} and {Meyer}, {Kerstin B.} and {Park}, {Jong-Eun} and {Stephenson}, {Emily} and {Pola{\'{n}}ski}, {Krzysztof} and {Goncalves}, {Angela} and {Gardner}, {Lucy} and {Holmqvist}, {Staffan} and {Henriksson}, {Johan} and {Zou}, {Angela} and {Sharkey}, {Andrew M.} and {Millar}, {Ben} and {Innes}, {Barbara} and {Wood}, {Laura} and {Wilbrey-Clark}, {Anna} and {Payne}, {Rebecca P.} and {Ivarsson}, {Martin A.} and {Lisgo}, {Steve} and {Filby}, {Andrew} and {Rowitch}, {David H.} and {Bulmer}, {Judith N.} and {Wright}, {Gavin J.} and {Stubbington}, {Michael J. T.} and {Haniffa}, {Muzlifah} and {Moffett}, {Ashley} and {Teichmann}, {Sarah A.}},
+	year = {2018},
+	month = {11},
+	date = {2018-11},
+	journal = {Nature},
+	pages = {347},
+	volume = {563},
+	number = {7731},
+	doi = {10.1038/s41586-018-0698-6},
+	url = {https://www.nature.com/articles/s41586-018-0698-6},
+	langid = {En}
+}
+
+@article{zheng,
+	title = {EpiDISH web server: Epigenetic Dissection of Intra-Sample-Heterogeneity with online GUI},
+	author = {{Zheng}, {Shijie C.} and {Breeze}, {Charles E.} and {Beck}, {Stephan} and {Dong}, {Danyue} and {Zhu}, {Tianyu} and {Ma}, {Liangxiao} and {Ye}, {Wei} and {Zhang}, {Guoqing} and {Teschendorff}, {Andrew E.}},
+	journal = {Bioinformatics},
+	doi = {10.1093/bioinformatics/btz833},
+	url = {https://academic.oup.com/bioinformatics/advance-article/doi/10.1093/bioinformatics/btz833/5618716},
+	langid = {en}
+}
+
+@article{gamage2018,
+	title = {The role of DNA methylation in human trophoblast differentiation},
+	author = {{Gamage}, {Teena K. J. B.} and {Schierding}, {William} and {Hurley}, {Daniel} and {Tsai}, {Peter} and {Ludgate}, {Jackie L.} and {Bhoothpur}, {Chandrakanth} and {Chamley}, {Lawrence W.} and {Weeks}, {Robert J.} and {Macaulay}, {Erin C.} and {James}, {Joanna L.}},
+	year = {2018},
+	month = {12},
+	date = {2018-12-02},
+	journal = {Epigenetics},
+	pages = {1154--1173},
+	volume = {13},
+	number = {12},
+	doi = {10.1080/15592294.2018.1549462},
+	url = {https://doi.org/10.1080/15592294.2018.1549462},
+	note = {PMID: 30475094}
+}
+
+@article{ehrlich1982,
+	title = {Amount and distribution of 5-methylcytosine in human DNA from different types of tissues or cells},
+	author = {{Ehrlich}, {Melanie} and {Gama-Sosa}, {Miguel A.} and {Huang}, {Lan-Hsiang} and {Midgett}, {Rose Marie} and {Kuo}, {Kenneth C.} and {McCune}, {Roy A.} and {Gehrke}, {Charles}},
+	year = {1982},
+	month = {04},
+	date = {1982-04-24},
+	journal = {Nucleic Acids Research},
+	pages = {2709--2721},
+	volume = {10},
+	number = {8},
+	doi = {10.1093/nar/10.8.2709},
+	url = {https://academic.oup.com/nar/article/10/8/2709/1130953},
+	langid = {en}
+}
+
+@article{guintivano2013,
+	title = {A cell epigenotype specific model for the correction of brain cellular heterogeneity bias and its application to age, brain region and major depression},
+	author = {{Guintivano}, {Jerry} and {Aryee}, {Martin J.} and {Kaminsky}, {Zachary A.}},
+	year = {2013},
+	date = {2013},
+	journal = {Epigenetics},
+	pages = {290--302},
+	volume = {8},
+	number = {3},
+	doi = {10.4161/epi.23924}
+}
+
+@article{fox1997,
+	title = {Aging of the placenta},
+	author = {{Fox}, {Harold}},
+	year = {1997},
+	month = {11},
+	date = {1997-11-01},
+	journal = {Archives of Disease in Childhood - Fetal and Neonatal Edition},
+	pages = {F171--F175},
+	volume = {77},
+	number = {3},
+	doi = {10.1136/fn.77.3.F171},
+	url = {https://fn.bmj.com/content/77/3/F171},
+	note = {Publisher: BMJ Publishing Group
+Section: Aging
+PMID: 9462184},
+	langid = {en}
+}
+
+@article{roland2016,
+	title = {Morphological changes of placental syncytium and their implications for the pathogenesis of preeclampsia},
+	author = {{Roland}, {Cynthia S.} and {Hu}, {Jian} and {Ren}, {Chun-E} and {Chen}, {Haibin} and {Li}, {Jinping} and {Varvoutis}, {Megan S.} and {Leaphart}, {Lynn W.} and {Byck}, {David B.} and {Zhu}, {Xueqiong} and {Jiang}, {Shi-Wen}},
+	year = {2016},
+	month = {01},
+	date = {2016-01},
+	journal = {Cellular and molecular life sciences : CMLS},
+	pages = {365--376},
+	volume = {73},
+	number = {2},
+	doi = {10.1007/s00018-015-2069-x},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4846582/},
+	note = {PMID: 26496726
+PMCID: PMC4846582}
+}
+
+@article{bartels2018,
+	title = {Placenta Accreta Spectrum: A Review of Pathology, Molecular Biology, and Biomarkers},
+	author = {{Bartels}, {Helena C.} and {Postle}, {James D.} and {Downey}, {Paul} and {Brennan}, {Donal J.}},
+	year = {2018},
+	month = {07},
+	date = {2018-07-03},
+	journal = {Disease Markers},
+	volume = {2018},
+	doi = {10.1155/2018/1507674},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6051104/},
+	note = {PMID: 30057649
+PMCID: PMC6051104}
+}
+
+@article{ritchie2015,
+	title = {limma powers differential expression analyses for RNA-sequencing and microarray studies},
+	author = {{Ritchie}, {Matthew E.} and {Phipson}, {Belinda} and {Wu}, {Di} and {Hu}, {Yifang} and {Law}, {Charity W.} and {Shi}, {Wei} and {Smyth}, {Gordon K.}},
+	year = {2015},
+	month = {04},
+	date = {2015-04-20},
+	journal = {Nucleic Acids Research},
+	pages = {e47--e47},
+	volume = {43},
+	number = {7},
+	doi = {10.1093/nar/gkv007},
+	url = {https://academic.oup.com/nar/article/43/7/e47/2414268},
+	langid = {en}
+}
+
+@article{smyth2004,
+	title = {Linear Models and Empirical Bayes Methods for Assessing Differential Expression in Microarray Experiments},
+	author = {{Smyth}, {Gordon K}},
+	year = {2004},
+	date = {2004},
+	journal = {Statistical Applications in Genetics and Molecular Biology},
+	pages = {1{\textendash}25},
+	volume = {3},
+	number = {1},
+	doi = {10.2202/1544-6115.1027},
+	url = {https://www.degruyter.com/view/j/sagmb.2004.3.issue-1/sagmb.2004.3.1.1027/sagmb.2004.3.1.1027.xml}
+}
+
+@article{zheng2017,
+	title = {Prediction of genome-wide DNA methylation in repetitive elements},
+	author = {{Zheng}, {Yinan} and {Joyce}, {Brian T.} and {Liu}, {Lei} and {Zhang}, {Zhou} and {Kibbe}, {Warren A.} and {Zhang}, {Wei} and {Hou}, {Lifang}},
+	year = {2017},
+	month = {09},
+	date = {2017-09-06},
+	journal = {Nucleic Acids Research},
+	pages = {8697--8711},
+	volume = {45},
+	number = {15},
+	doi = {10.1093/nar/gkx587},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5587781/},
+	note = {PMID: 28911103
+PMCID: PMC5587781}
+}
+
+@article{yuan2019,
+	title = {Accurate ethnicity prediction from placental DNA methylation data},
+	author = {{Yuan}, {Victor} and {Price}, {E. Magda} and {Del Gobbo}, {Giulia} and {Mostafavi}, {Sara} and {Cox}, {Brian} and {Binder}, {Alexandra M.} and {Michels}, {Karin B.} and {Marsit}, {Carmen} and {Robinson}, {Wendy P.}},
+	year = {2019},
+	month = {08},
+	date = {2019-08-09},
+	journal = {Epigenetics & Chromatin},
+	pages = {51},
+	volume = {12},
+	number = {1},
+	doi = {10.1186/s13072-019-0296-3},
+	url = {https://doi.org/10.1186/s13072-019-0296-3},
+	note = {tex.ids: yuanAccurateEthnicityPrediction2019
+PMCID: PMC6688210
+PMID: 31399127}
+}
